# major-key

./: Cargo.toml  README.md  build.rs
proto/: message.proto
src/: client.rs  command.rs  lib.rs  librequest.rs  location.rs  main.rs  node.rs  noderecord.txt  nodewrapper.rs  replica.rs  request.proto  request_lib.rs  server.rs  value.rs
test/: record.txt
