[package]
name = "major-key"
version = "0.1.0"
authors = ["Junhson <jjeanba2@binghamton.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "1.1.0"
bytes = "1.0.1"
prost = "0.7.0"

[build-dependencies]
prost-build = { version = "0.7.0" }
