[package]
name = "major-key"
version = "0.1.0"
authors = ["Junhson <jjeanba2@binghamton.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bson = "1.1.0"
bytes = "1.0.1"
clap = { version = "4.5.26", features = ["derive"] }
prost = "0.7.0"
serde = "1.0.125"

[build-dependencies]
prost-build = { version = "0.12.6" }
